Creation of DTO's for the auth, the quote and the journal Creation of Controllers for the auth, quote, savedQuote and journal