@@ -3,7 +3,10 @@ package com.silentgarden.silentgarden.controller;
 import com.silentgarden.silentgarden.repository.SavedQuoteRepository;
 import com.silentgarden.silentgarden.model.SavedQuote;
 import com.silentgarden.silentgarden.dto.SavedQuoteDTO;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -18,14 +21,29 @@ public class SavedQuoteController {
     private SavedQuoteRepository savedQuoteRepository;
 
     @PostMapping("saving-quote")
-    public SavedQuote savedQuote(@RequestBody SavedQuote quote) {
+    public ResponseEntity<?> savedQuote(@RequestBody @Valid SavedQuote quote) {
+        if (quote == null) {
+            return ResponseEntity
+                    .status(HttpStatus.BAD_REQUEST)
+                    .body("quote cannot be null");
+        }
 
-        return savedQuoteRepository.save(quote);
+        savedQuoteRepository.save(quote);
+
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body("Quote saved successfully");
     }
 
-    @GetMapping("/{id}")
-    public List<SavedQuoteDTO> getSavedQuoteByUser(@PathVariable Integer id) {
-        return savedQuoteRepository.findByUserId(id)
+    @GetMapping("/{user_id}")
+    public ResponseEntity<?> getSavedQuoteByUser(@PathVariable("user_id") @Valid Integer userId) {
+        if (userId == null) {
+            return ResponseEntity
+                    .status(HttpStatus.BAD_REQUEST)
+                    .body("userId cannot be null");
+        }
+
+        List<SavedQuoteDTO> allSavedQuote = savedQuoteRepository.findByUserId(userId)
                 .stream()
                 .map(saved -> new SavedQuoteDTO(
                         saved.getQuote().getQuote_text(),
@@ -33,6 +51,10 @@ public class SavedQuoteController {
                         saved.getQuote().getCreated_at(),
                         saved.getSaved_at()
                 ))
-                .collect(Collectors.toList());
+                .toList();
+
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(allSavedQuote);
     }
 }
